--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
   <form action="https://www.w3schools.com/action_page.php" class="container">
     <h1>Напишите нам</h1>
 
-    <label for="email"><b>Email</b></label><br>
+    <label id="email"><b>Email</b></label><br>
     <input type="text" placeholder="Enter Email" name="email" required>
 
-    <label for="psw"><b>Password</b></label><br>
+    <label id="psw"><b>Password</b></label><br>
     <input type="password" placeholder="Enter Password" name="psw" required>
 
     <button type="submit" class="btn">Login</button>
